--- a/src/app/product/product-list.component.html
+++ b/src/app/product/product-list.component.html
@@ -41,7 +41,7 @@
                    [src]="product.imageUrl"
                    [title]="product.productName"
                    [style.width.px]="imageWidth"></td>
-          <td>{{product.productName}}</td>
+          <td><a [routerLink]="['/product', product.productId]">{{product.productName}}</a></td>
           <td>{{product.productCode | convertToSpaces:'-'}}</td>
           <td>{{product.releaseDate}}</td>
           <td>{{product.price | currency:'&#8377;'}}</td>
